Added ava for futuristic testing 🚀

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "homepage": "https://telekits.js.org",
   "scripts": {
-    "test": "eslint ."
+    "test": "eslint . && ava"
   },
   "repository": {
     "type": "git",
@@ -39,6 +39,7 @@
     "teleapi": "^2.3.1"
   },
   "devDependencies": {
+    "ava": "^0.17.0",
     "eslint": "^3.14.1",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0"
