--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
 {
+    "root": true,
+
     "extends": "airbnb-base",
+    "plugins": ["import"],
+    "env": { "node": true },
+
     "rules": {
         "indent": ["error", 4]
-    },
-    "plugins": [
-        "import"
-    ]
+    }
 }
