NPM: description is updated.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "telekit",
   "version": "0.2.0-rc0",
-  "description": "The powerful, but an elegantly simple toolkit for making Telegram Bots",
+  "description": "The strong and elegant of Telegram Bot Framework",
   "main": "index.js",
   "author": "Denis Maslennikov <mrdenniska@gmail.com> (nofach.com)",
   "license": "MIT",
