--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "telekit",
-  "version": "1.0.0",
+  "version": "1.0.0-rc1",
   "description": "The strong and elegant the Telegram Bot Framework",
   "main": "index.js",
   "author": "Denis Maslennikov <mrdenniska@gmail.com> (nofach.com)",
